--- a/tracker.ipynb
+++ b/tracker.ipynb
@@ -35,9 +35,7 @@
     "\n",
     "from web3 import Web3\n",
     "\n",
-    "url = 'https://mainnet.infura.io/v3/596f330c1be84362996376bbcaeebe17'\n",
-    "#'717e1093b1b846f196a01dc66b2432f8'\n",
-    "# 'f8fbb2939ecf4435a8bd442de73ee64d'\n",
+    "url = 'https://mainnet.infura.io/v3/put_here_your_keys'\n",
     "\n",
     "w3 = Web3(Web3.HTTPProvider(url))\n",
     "from hexbytes import HexBytes\n",
@@ -52,9 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethplorer_key = 'EK-vVxt1-VCHBYmw-LUoAS'\n",
-    "#'EK-7Z5Pj-6qFHsmU-odq77'\n",
-    "etherscan_key = 'ZG8DBBDRBNA6IKARI6DBMN76Q1F4CABS27'"
+    "ethplorer_key = 'put_here_your_key'\n",
+    "etherscan_key = 'put_here_your_key'"
    ]
   },
   {
